--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer CSS</title>
+    <title>CSS Stuff</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
     <header>header goes here</header>
     <main>
-        <section class="blank">just a blank area for spacing purposes. Scroll down to footer</section>
+        <section class="blank">just a blank area for spacing purposes. Scroll down to footer. Compare to mobile and desktop view.</section>
     </main>
     <footer>
         <section class="footer-links">
