added header script

--- a/index.html
+++ b/index.html
@@ -498,5 +498,6 @@
         </section>
     </footer>
 </body>
+<script src="./js/header.js"></script>
 <script src="./js/footer.js"></script>
 </html>
